@@ -7,6 +7,8 @@
 	(epackage-info-mode): Call `epackage-info-mode-pcomplete-variables'.
 	(epackage-info-mode-pcomplete-list): Rewrite complete code.
 	(epackage-info-mode-set-variables): Set `colon-double-space'.
+	(epackage-info-mode-set-pcomplete-variables): Rename. Was
+	`epackage-info-mode-pcomplete-variables'.
 
 2011-01-06  Jari Aalto  <jari.aalto@cante.net>
 
